force-app/main/default/objects/QuickAppSwitcher__mdt/fields/AppAlternateTexts__c.field-meta.xml
<CustomField>
    <fullName>AppAlternateTexts__c</fullName>
    <inlineHelpText>List of Alternate Text values for the images. Separate values with a comma but no space.</inlineHelpText>
    <label>AppAlternateTexts</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>