force-app/main/default/objects/QuickAppSwitcher__mdt/fields/AppAPINames__c.field-meta.xml
<CustomField>
    <fullName>AppAPINames__c</fullName>
    <inlineHelpText>Prefix with &apos;standard__&apos; for Standard Apps and &apos;c__&apos; for Custom Apps. Separate values with a comma but no space.</inlineHelpText>
    <label>AppAPINames</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>