force-app/main/default/objects/QuickAppSwitcher__mdt/fields/AppImageNames__c.field-meta.xml
<CustomField>
    <fullName>AppImageNames__c</fullName>
    <inlineHelpText>List of image names from /images/ sub-directory in the APP_Images Static Resource. Separate values with a comma but no space. Be sure to match case exactly. Example: Star.PNG,Apple.jpg</inlineHelpText>
    <label>AppImageNames</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>